# skimsmarkets

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
models/: tennis_algo_form_surface.metrics.json  tennis_algo_lens_additive_info_test.json  tennis_gbt_bag_calib.json  tennis_gbt_hparam_search.json  tennis_gbt_iter5_ablation.json  tennis_gbt_spike.cbm  tennis_gbt_spike.iter2_features.cbm  tennis_gbt_spike.iter2_features.metrics.json  tennis_gbt_spike.metrics.json  tennis_gbt_spike.pre_elo.cbm  tennis_gbt_spike.pre_elo.metrics.json  tennis_gbt_spike.pre_iter1.metrics.json  tennis_gbt_spike.pre_rank_h2h.cbm  tennis_gbt_spike.pre_rank_h2h.metrics.json  tennis_gbt_spike.pre_widening.metrics.json  tennis_gbt_spike.v1.cbm  tennis_gbt_spike.v1.metrics.json  tennis_gbt_spike.v2.cbm  tennis_gbt_spike.v2.metrics.json  tennis_gbt_spike.v3.cbm  tennis_lens_gbt_form_surface.phase0_ablation_scorecard.json  tennis_lens_gbt_form_surface.phase0_scorecard.json  tennis_lens_gbt_matchup_clutch.phase0_scorecard.json
models/selection_backtest/: baseline_random_seed42.metrics.json  baseline_rank_points.metrics.json  baseline_rank_points_ratio.metrics.json  (+155 more)
playbooks/: calibration.md  cloud-trading-routine.md  retro-analysis.md  tennis-iteration.md
scripts/: ask_grok.py  audit_fields.py  backtest_convergence.py  build_backtest.py  ev_bucket_retro.py  ev_selector_ablation.py  gbt_ablation_iter5.py  gbt_bag_and_calibrate.py  gbt_hparam_search.py  run_calibration_suite.py  uw_enrichment_retro.py  validate_ev_calibration.py
tests/: test_execute.py  test_menu.py
(+109 files in other folders)
