[project]
name = "skimsmarkets"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13",
    "ruff>=0.15.11",
    "xai-sdk>=1.0",
]

[project.scripts]
skims = "skimsmarkets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skimsmarkets"]
